Bug 124886 - Toolbar button icons are off by one
Summary: Toolbar button icons are off by one
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
: 124938 124952 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-04-22 13:13 UTC by Aron Budea
Modified: 2019-04-25 15:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison screenshot (117.39 KB, image/png)
2019-04-22 13:13 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-04-22 13:13:05 UTC
Created attachment 150916 [details]
Comparison screenshot

Open Writer. Note how images for toolbar buttons are off, the Paste now shows Clone Formatting, and near the end there are two Shape symbols (for Insert Basic Shape and Insert Line). See attached comparison screenshot between 6.2.0.3 and current master build.

Bibisected using repo bibisect-linux-64-6.3 to the following commit. Adding Cc: to Noel Grandin, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=1a5b12aa5da2c718848d3cc5d9bce7bfcdeacf54
author		Noel Grandin <noel.grandin@collabora.co.uk>	2019-04-18 15:13:19 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-04-19 13:19:31 +0200

optimise find/insert pattern
Comment 1 raal 2019-04-22 17:39:25 UTC
same problem in Calc
Comment 2 Commit Notification 2019-04-23 17:57:58 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7482a400cc90ddb8bf1d53d7655a4027e50fe593%5E%21

tdf#124886 Toolbar button icons are off by one

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-04-25 10:06:18 UTC
*** Bug 124938 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2019-04-25 13:38:14 UTC
*** Bug 124952 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2019-04-25 15:15:25 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: fad98c8641342a77241124dd98e0cb781daef4ad
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!