tdf#124886 Toolbar button icons are off by one

regression from
    commit 1a5b12aa5da2c718848d3cc5d9bce7bfcdeacf54
    Date:   Thu Apr 18 15:13:19 2019 +0200
    optimise find/insert pattern

Change-Id: I24edd5a89beed392c86058cd60155caf94bcf9ca
Reviewed-on: https://gerrit.libreoffice.org/71137
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>